--- a/views/nasa.ejs
+++ b/views/nasa.ejs
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-    <div id="Pick_Date_Range" class="container-fluid mt-2" style="text-align: center">
+    <div id="Pick_Date_Range" class="container-fluid mt-2" style="text-align: center; display: none">
         <form id="Pick-Date-Form">
             <label for="date-input">Date</label>
             <input type="date" id="date-input" name="trip-start">
@@ -47,7 +47,7 @@
     </div>
 
 
-    <div id="images-container" class="container"></div>
+    <div id="images-container" class="container mt-2"></div>
     <div class="container">
         <button id="load-more-btn" class="btn btn-dark mb-1" style="display: none">Load More</button>
     </div>
