--- a/views/nasa.ejs
+++ b/views/nasa.ejs
@@ -47,7 +47,9 @@
     </div>
 
 
-    <div id="images-container" class="container mt-2"></div>
+    <div id="images-container" class="container mt-2">
+          <div class="image-grid" id="grid-wrapper"></div>
+    </div>
     <div class="container">
         <button id="load-more-btn" class="btn btn-dark mb-1" style="display: none">Load More</button>
     </div>
