enhance date picker element

--- a/views/nasa.ejs
+++ b/views/nasa.ejs
@@ -38,11 +38,11 @@
         </div>
     </div>
 
-    <div id="Pick_Date_Range" class="container-fluid mt-2" style="text-align: center; display: none">
-        <form id="Pick-Date-Form">
-            <label for="date-input">Date</label>
-            <input type="date" id="date-input" name="trip-start">
-            <button type="submit" class="btn btn-dark">Submit</button>
+    <div id="Pick_Date_Range" class="container-fluid mt-3 d-none d-flex justify-content-center">
+        <form id="Pick-Date-Form" class="d-flex justify-content-start align-items-center gap-2">
+            <label for="date-input" class="form-label mb-0"><b>Date:</b></label>
+            <input type="date" id="date-input" name="trip-start" class="form-control form-control-sm w-auto">
+            <button type="submit" class="btn btn-dark btn-sm">Submit</button>
         </form>
     </div>
 
