--- a/views/nasa.ejs
+++ b/views/nasa.ejs
@@ -4,10 +4,6 @@
 
 <body>
 
-<div id="loader" style="visibility: hidden; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
-    <img src="images/loading.gif" alt="Loading...">
-</div>
-
 <div id="mainPage">
 
     <!--Header-->
@@ -58,7 +54,7 @@
     </div>
 </div>
 
-<script defer src="javascripts/nasa.js"></script>
+<script type="module" src="javascripts/nasa.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
